# LiquidBounce

./: .editorconfig  .gitignore  .gitmodules  LICENSE  LiquidBounce.ipr  LiquidBounce.iws  README.md  build.gradle  build.py  gradle.properties  gradlew  package-lock.json  runclient.bat  settings.gradle
.github/: CODING_STANDARDS.md  FUNDING.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build.yml  code_quality.yml  gradle.yml  labeler.yml  pull_request.yml
1.12.2-Forge/: .gitignore  build.gradle
1.8.9-Forge/: .gitignore  build.gradle  gradle.properties
1.8.9-Vanilla/: build.gradle
altmanager/public/: index.html
bmw/: Changes
clickgui/: .gitignore  old.js
clickgui/public/: global.css  index.html
clickgui/src/: ClickGui.svelte
common/: build.gradle
config/detekt/: baseline.xml  (+1 more)
detekt/: baseline.xml  detekt.yml
gradle/: libs.versions.toml
hud/: .gitignore  package-lock.json  package.json
inbuilt-processor/: build.gradle
jupyter/: jumpLength.ipynb  jumpLengths.csv
server/: BMW_server.py
shared_res/: package-lock.json  package.json
src-theme/: .gitignore  LICENSE  README.md  build.py  bundle.cjs  bundle.js  index.html  package-lock.json  package.json  rollup.config.js  rollup.config.mjs  tailwind.config.ts  theme.json  tsconfig.json  vite.config.ts
src/native/: Cargo.toml
src/native/src/: lib.rs  sciter_wrapper.rs
title/: package-lock.json  package.json
zip_include/: FORUM.URL  README.txt  TWITTER.URL  WEBSITE.URL  YOUTUBE.URL
(+5818 files in other folders)
